# yt-media-storage

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
src/: image_decoder.cpp  image_decoder.h  image_encoder.cpp  image_encoder.h
